Fix amenities spacing

--- a/client/src/assets/stylesheets/RestaurantDetail.css
+++ b/client/src/assets/stylesheets/RestaurantDetail.css
@@ -428,7 +428,7 @@
   padding-top: 10px;
 }
 
-.amenities-list-container ul {
+.thumb-amenities-wrapper {
   display: flex;
   flex-direction: column;
   align-content: space-between;
@@ -459,7 +459,7 @@
 }
 
 .amenities-list-container .extra-amenities-container li .extra-amenity-pair-first {
-  width: 411px;
+  width: 66.5%;
 }
 
 .amenities-list-container ul:first-of-type {
